--- a/test/debuggify.html.html
+++ b/test/debuggify.html.html
@@ -2,6 +2,35 @@
 <head>
 <script type="text/javascript" src="../debuggify.js"></script>
 </head>
-<body></body>
+<body>
+	
+
+<script type="text/javascript">
+	//Application
+	var D = new debuggify;
+	console.log(D);
+	
+	var d = D.__init({
+		l : false,	//log
+		w : true, 	//warning
+		e : true,	//error
+		x : true,	//exception
+		a : true,	//assert
+		d : true	//dump
+	})
+	
+	console.log(d);
+	
+	d.log("This a log message");
+	d.error("This a error message");
+	d.warning("This a warning message");
+	d.execption("This a exception message");
+	d.assert("this is a assert message");
+
+</script>	
+
+	
+	
+</body>
 
 </html>
