Updating the debuggify code

--- a/test/Async1.html
+++ b/test/Async1.html
@@ -4,7 +4,6 @@
 </head>
 <body>
 	
-
 <script type="text/javascript">
 
     var _debuggify = _debuggify || [];
@@ -23,12 +22,11 @@
         
     })()
 
-    console.log(_debuggify);
+//    console.log(_debuggify);
     
-</script>	
-
-	
-	
+</script>
+<script type="text/javascript" src="../debuggify.js"></script>
 </body>
 
 </html>
+
