--- a/test/Async1.html
+++ b/test/Async1.html
@@ -15,7 +15,7 @@
         
         d.push(["log", "This a log message"]);
         d.push(["error", "This a error message"]);
-        d.push(["waning", "This a warning message"]);
+        d.push(["warning", "This a warning message"]);
         d.push(["exception","This a exception message"]);
         d.push(["assert","This is a assert message"]);
         d.push(["dump","This is a dump message"]);
@@ -25,7 +25,7 @@
 //    console.log(_debuggify);
     
 </script>
-<script type="text/javascript" src="../debuggify.js"></script>
+<!--<script type="text/javascript" src="../debuggify.js"></script>-->
 </body>
 
 </html>
